<resources>
    <string name="app_name">Fawaz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_lang">ChooseLang</string>
    <string name="title_activity_about_us">AboutUS</string>
    <string name="title_activity_social_media">SocialMedia</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="telephone">Telephone</string>
    <string name="email_address">Email Address</string>
    <string name="message">Message</string>
    <string name="your_name">Your Name</string>
    <string name="send_us">Send us a direct email using the form below</string>
    <string name="email_site">E-mail: kw.fawaz.com</string>
    <string name="fax">Fax: +96524346988</string>
    <string name="landline">Landline: +965-229420000 Call Center:, 1888010</string>
    <string name="po_box">PO BOX 20423 Safat, 13065, Kuwait</string>
    <string name="kuwait">Kuwait</string>
    <string name="submit">submit</string>
    <string name="social_media">Social Media</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="products">Products</string>
    <string name="select_section">Select section</string>
    <string name="order">Orders</string>
    <string name="sections">Sections</string>
    <string name="language">Languages</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="condtions">Air Conditioners</string>
    <string name="title_activity_map">Map</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="submits">Submit</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="mail">Mail</string>
    <string name="loading"> loading &#8230;</string>
    <string name="tel_con">T: +968 2488642</string>
    <string name="fax_con">F: +968 2488731</string>
    <string name="email_con">om.info@fawaz.com</string>
    <string name="address_con">Address: Main Al Wahdad Street, /n PO Box 1170, Sharjah UAE </string>
    <string name="title_activity_country_data">CountryData</string>

    <string name="hello_world">Hello world!</string>




</resources>
